--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,8 +9,8 @@ template(name='nav')
                     i.big.yin.yang.loading.icon
                 else
                     i.big.yin.yang.icon
-            a.icon.zoomer.item(href='/tribes' class="{{isActivePath regex='tribes'}}" title='tribes')
-                i.large.fire.icon
+            // a.icon.zoomer.item(href='/tribes' class="{{isActivePath regex='tribes'}}" title='tribes')
+            //     i.large.fire.icon
             // a.icon.zoomer.item.goto_vid(href='/vids' class="{{isActivePath regex='vids'}}" title='videos')
             //     i.large.video.icon
             // a.icon.zoomer.item.goto_ea(href='/ea' class="{{isActivePath regex='ea'}}" title='ea')
