--- a/client/s.css
+++ b/client/s.css
@@ -199,7 +199,7 @@ html.ios body {
 
 .segment:not(.pushable) {
   /*transition: height .15s linear;*/
-  /*border-radius: 10px !important;*/
+  border-radius: 10px !important;
 }
 
 .bottom_rounded {
